plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.4'
}


group = 'org.lubumall.lubumall-common'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.2"
    }
}


dependencies {
    implementation 'org.springframework.retry:spring-retry:2.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework:spring-webmvc:6.1.2'
    implementation("org.springframework.boot:spring-boot-starter-validation:3.3.5")

    compileOnly 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.0'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    implementation 'org.aspectj:aspectjweaver:1.9.20'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}


test {
    useJUnitPlatform()
}